final update, included drag and drop functionality

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 
 
 <body>
-
+    <div class="header"><h2>Trello project made by Andrija Hanga</h2></div>
     <div id="addTodoListDiv">
-        <input id="addTodoListInput" class="comment">
+        <input id="addTodoListInput" class="comment" placeholder="Name your list">
         <button id="addTodoListButton" class="btn-save">Add new list</button>
     </div>
     
     <div id="root"></div>
+    <script src="script.js"></script>
 
 </body>    
 
-<script src="script.js"></script>
 
 </html>
